fix: 동아리 목록 리스트 반환을clubs에 담아서 전송